[tool.poetry]
name = "kitlami"
version = "0.1.0"
description = ""
authors = ["yepIwt <ReetRay@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
pydantic = "^1.10.9"
blacksheep = "^1.2.15"
punq = "^0.6.2"
orjson = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
