[tool.poetry]
name = "kitlami"
version = "0.1.0"
description = ""
authors = ["yepIwt <ReetRay@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
pydantic = "^1.10.9"
blacksheep = "^1.2.15"
punq = "^0.6.2"
orjson = "^3.9.1"
pyjwt = "^2.7.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
